# agentic-systems

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml
docs/: architecture.md  linkedin-post.md  usage.md
docs/decisions/: 001-local-vector-storage.md
src/: memory_store.py  server.py  utils.py
tests/: test_memory_operations.py
