[project]
name = "agentic-systems"
version = "0.1.0"
description = "Production-grade infrastructure for multi-agent orchestration, memory persistence, and distributed coordination."
authors = [
    {name = "Prabhu Ravichandran", email = "prabhu@example.com"},
]
dependencies = [
    "mcp>=0.1.0",
    "chromadb>=0.4.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.hatch.build.targets.wheel]
packages = ["src"]